tests/typing/errors/shadow/def_fun_param.smt2
(set-logic ALL)
(define-fun f ((x Int) (x Int)) Bool (= x x))
(check-sat)
(exit)
